--- a/demo-start-v12/src/app/customers/customer.component.html
+++ b/demo-start-v12/src/app/customers/customer.component.html
@@ -4,9 +4,7 @@
   </div>
 
   <div class="card-body">
-    <form novalidate
-          (ngSubmit)="save(signupForm)"
-          #signupForm="ngForm">
+    <form novalidate [formGroup]="customerForm">
 
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
@@ -18,15 +16,14 @@
                  placeholder="First Name (required)"
                  required
                  minlength="3"
-                 [(ngModel)]=customer.firstName
                  name="firstName"
-                 #firstNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (firstNameVar.touched || firstNameVar.dirty) && !firstNameVar.valid }" />
+                 formControlName="firstName"
+                 [ngClass]="{'is-invalid': (customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty) && !customerForm.get('firstName')?.valid }" />
           <span class="invalid-feedback">
-            <span *ngIf="firstNameVar.errors?.required">
+            <span *ngIf="customerForm.get('firstName')?.errors?.required">
               Please enter your first name.
             </span>
-            <span *ngIf="firstNameVar.errors?.minlength">
+            <span *ngIf="customerForm.get('firstName')?.errors?.minlength">
               The first name must be longer than 3 characters.
             </span>
           </span>
@@ -43,15 +40,14 @@
                  placeholder="Last Name (required)"
                  required
                  maxlength="50"
-                 [(ngModel)]="customer.lastName"
                  name="lastName"
-                 #lastNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (lastNameVar.touched || lastNameVar.dirty) && !lastNameVar.valid }" />
+                 formControlName="lastName"
+                 [ngClass]="{'is-invalid': (customerForm.get('lastName')?.touched || customerForm.get('lastName')?.dirty) && !customerForm.get('lastName')?.valid }" />
           <span class="invalid-feedback">
-            <span *ngIf="lastNameVar.errors?.required">
+            <span *ngIf="customerForm.get('lastName')?.errors?.required">
               Please enter your last name.
             </span>
-            <span *ngIf="lastNameVar.errors?.maxlength">
+            <span *ngIf="customerForm.get('lastName')?.errors?.maxlength">
               The last name must be less than 50 characters.
             </span>
           </span>
@@ -68,15 +64,14 @@
                  placeholder="Email (required)"
                  required
                  email
-                 [(ngModel)]="customer.email"
                  name="email"
-                 #emailVar="ngModel"
-                 [ngClass]="{'is-invalid': (emailVar.touched || emailVar.dirty) && !emailVar.valid }" />
+                 formControlName="emailAddress"
+                 [ngClass]="{'is-invalid': (customerForm.get('emailAddress')?.touched || customerForm.get('emailAddress')?.dirty) && !customerForm.get('emailAddress')?.valid }" />
           <span class="invalid-feedback">
-            <span *ngIf="emailVar.errors?.required">
+            <span *ngIf="customerForm.get('emailAddress')?.errors?.required">
               Please enter your email address.
             </span>
-            <span *ngIf="emailVar.errors?.email">
+            <span *ngIf="customerForm.get('emailAddress')?.errors?.email">
               Please enter a valid email address.
             </span>
           </span>
@@ -90,132 +85,121 @@
               <input class="form-check-input"
                      id="sendCatalogId"
                      type="checkbox"
-                     [(ngModel)]="customer.sendCatalog"
                      name="sendCatalog"> Send me your catalog
             </label>
           </div>
         </div>
       </div>
 
-      <div *ngIf="customer.sendCatalog">
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label pt-0">Address Type</label>
-          <div class="col-md-8">
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="home"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Home
-              </label>
-            </div>
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="work"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Work
-              </label>
-            </div>
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="other"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Other
-              </label>
-            </div>
-          </div>
-        </div>
+<!--      <div *ngIf="customer.sendCatalog">-->
+<!--        <div class="form-group row mb-2">-->
+<!--          <label class="col-md-2 col-form-label pt-0">Address Type</label>-->
+<!--          <div class="col-md-8">-->
+<!--            <div class="form-check form-check-inline">-->
+<!--              <label class="form-check-label">-->
+<!--                <input class="form-check-input"-->
+<!--                       type="radio"-->
+<!--                       value="home"-->
+<!--                       name="addressType"> Home-->
+<!--              </label>-->
+<!--            </div>-->
+<!--            <div class="form-check form-check-inline">-->
+<!--              <label class="form-check-label">-->
+<!--                <input class="form-check-input"-->
+<!--                       type="radio"-->
+<!--                       value="work"-->
+<!--                       name="addressType"> Work-->
+<!--              </label>-->
+<!--            </div>-->
+<!--            <div class="form-check form-check-inline">-->
+<!--              <label class="form-check-label">-->
+<!--                <input class="form-check-input"-->
+<!--                       type="radio"-->
+<!--                       value="other"-->
+<!--                       name="addressType"> Other-->
+<!--              </label>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="street1Id">Street Address 1</label>
-          <div class="col-md-8">
-            <input class="form-control"
-                   id="street1Id"
-                   type="text"
-                   placeholder="Street address"
-                   [(ngModel)]="customer.street1"
-                   name="street1">
-          </div>
-        </div>
+<!--        <div class="form-group row mb-2">-->
+<!--          <label class="col-md-2 col-form-label"-->
+<!--                 for="street1Id">Street Address 1</label>-->
+<!--          <div class="col-md-8">-->
+<!--            <input class="form-control"-->
+<!--                   id="street1Id"-->
+<!--                   type="text"-->
+<!--                   placeholder="Street address"-->
+<!--                   name="street1">-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="street2Id">Street Address 2</label>
-          <div class="col-md-8">
-            <input class="form-control"
-                   id="street2Id"
-                   type="text"
-                   placeholder="Street address (second line)"
-                   [(ngModel)]="customer.street2"
-                   name="street2">
-          </div>
-        </div>
+<!--        <div class="form-group row mb-2">-->
+<!--          <label class="col-md-2 col-form-label"-->
+<!--                 for="street2Id">Street Address 2</label>-->
+<!--          <div class="col-md-8">-->
+<!--            <input class="form-control"-->
+<!--                   id="street2Id"-->
+<!--                   type="text"-->
+<!--                   placeholder="Street address (second line)"-->
+<!--                   name="street2">-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="cityId">City, State, Zip Code</label>
-          <div class="col-md-3">
-            <input class="form-control"
-                   id="cityId"
-                   type="text"
-                   placeholder="City"
-                   [(ngModel)]="customer.city"
-                   name="city">
-          </div>
-          <div class="col-md-3">
-            <select class="form-control"
-                    id="stateId"
-                    [(ngModel)]="customer.state"
-                    name="state">
-              <option value=""
-                      disabled
-                      selected
-                      hidden>Select a State...</option>
-              <option value="AL">Alabama</option>
-              <option value="AK">Alaska</option>
-              <option value="AZ">Arizona</option>
-              <option value="AR">Arkansas</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WY">Wyoming</option>
-            </select>
-          </div>
-          <div class="col-md-2">
-            <input class="form-control"
-                   id="zipId"
-                   type="number"
-                   placeholder="Zip Code"
-                   [(ngModel)]="customer.zip"
-                   name="zip">
-          </div>
-        </div>
-      </div>
+<!--        <div class="form-group row mb-2">-->
+<!--          <label class="col-md-2 col-form-label"-->
+<!--                 for="cityId">City, State, Zip Code</label>-->
+<!--          <div class="col-md-3">-->
+<!--            <input class="form-control"-->
+<!--                   id="cityId"-->
+<!--                   type="text"-->
+<!--                   placeholder="City"-->
+<!--                   name="city">-->
+<!--          </div>-->
+<!--          <div class="col-md-3">-->
+<!--            <select class="form-control"-->
+<!--                    id="stateId"-->
+<!--                    name="state">-->
+<!--              <option value=""-->
+<!--                      disabled-->
+<!--                      selected-->
+<!--                      hidden>Select a State...</option>-->
+<!--              <option value="AL">Alabama</option>-->
+<!--              <option value="AK">Alaska</option>-->
+<!--              <option value="AZ">Arizona</option>-->
+<!--              <option value="AR">Arkansas</option>-->
+<!--              <option value="CA">California</option>-->
+<!--              <option value="CO">Colorado</option>-->
+<!--              <option value="WI">Wisconsin</option>-->
+<!--              <option value="WY">Wyoming</option>-->
+<!--            </select>-->
+<!--          </div>-->
+<!--          <div class="col-md-2">-->
+<!--            <input class="form-control"-->
+<!--                   id="zipId"-->
+<!--                   type="number"-->
+<!--                   placeholder="Zip Code"-->
+<!--                   name="zip">-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
           <button class="btn btn-primary mr-3"
                   type="submit"
                   style="width:80px"
-                  [title]="signupForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                  [disabled]="!signupForm.valid">
+                  [title]="customerForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
+                  [disabled]="!customerForm.valid">
             Save
-          </button>
+          </button>&nbsp;
+          <button class="btn btn-outline-secondary" type="button" (click)="populateTestData()">Test Data</button>
         </div>
       </div>
     </form>
   </div>
 </div>
-<br>Dirty: {{ signupForm.dirty }}
-<br>Touched: {{ signupForm.touched }}
-<br>Valid: {{ signupForm.valid }}
-<br>Value: {{ signupForm.value | json }}
+<br>Dirty: {{ customerForm.dirty }}
+<br>Touched: {{ customerForm.touched }}
+<br>Valid: {{ customerForm.valid }}
+<br>Value: {{ customerForm.value | json }}
